--- a/week-2/index.html
+++ b/week-2/index.html
@@ -6,10 +6,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
-	<title>Module 2 Solution</title>
+	<title>Module 2 Coding Assignment Solution</title>
 </head>
 <body>
-	<h1>Our Menu</h1>
+	<h1>Our Top Recepies</h1>
 	<div class="row">
 	<div class="container col-lg-4 col-md-6 col-sm-12">
 		<section>
