--- a/week-3/index.html
+++ b/week-3/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
 	
-	<title>Module 3 Solution</title>
+	<title>Module 3 Coding Assignment Solution</title>
 </head>
 <body>
     <header class="nav-header">
